added a new acticity for the map

--- a/app/src/androidTest/java/AndroidManifest.xml
+++ b/app/src/androidTest/java/AndroidManifest.xml
@@ -31,5 +31,13 @@
       </intent-filter>
     </activity>
 
+    <activity
+        android:name=".Main2Activity"
+        android:parentActivityName=".MainActivity">
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value=".MainActivity" />
+    </activity>
+
   </application>
 </manifest>
